ops/webidl/test_cases_fail/enum.stderr
error: variants with fields are not allowed for enum variants
 --> ../webidl/test_cases_fail/enum.rs:8:3
  |
8 |   FooBar(u32),
  |   ^^^^^^^^^^^
